--- a/code/index.html
+++ b/code/index.html
@@ -2,19 +2,26 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>API</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Document</title>
 </head>
 
 <body>
     <div id="main"></div>
-    <form id="form-new">
+    <br>
+    <form id="form-e">
+        <input type="text" id="new-name">
+        <input type="submit" value="Edit Student">
+    </form>
+    <br>
+    <form id="form-n">
         <input type="text" id="name">
         <input type="submit" value="Add New Student">
     </form>
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
+
     <script src="main.js"></script>
 </body>
 
