--- a/code/index.html
+++ b/code/index.html
@@ -9,13 +9,10 @@
 </head>
 
 <body>
+    <h1>Developers</h1>
     <div id="main"></div>
     <br>
-    <form id="form-e">
-        <input type="text" id="new-name">
-        <input type="submit" value="Edit Student">
-    </form>
-    <br>
+    <h1>Add new Developer</h1>
     <form id="form-n">
         <input type="text" id="name">
         <input type="submit" value="Add New Student">
