--- a/code/index.html
+++ b/code/index.html
@@ -13,13 +13,16 @@
     <div id="main"></div>
     <br>
     <h1>Add new Developer</h1>
+    <ul id='devList'></ul>
+
     <form id="form-n">
         <input type="text" id="name">
         <input type="submit" value="Add New Student">
     </form>
+
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
 
-    <script src="main.js"></script>
+    <script src="./main.js"></script>
 </body>
 
 </html>
